<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/camanchaca_logo"
                android:scaleType="fitCenter"
                android:src="@mipmap/camanchaca_foreground"
                android:visibility="visible"
                app:srcCompat="@mipmap/camanchaca_foreground" />

            <TextView
                android:id="@+id/tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verificadr"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:text="@string/txt1"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/spinnerBodega"
                android:layout_width="328dp"
                android:layout_height="48dp"
                android:layout_marginBottom="48dp"
                android:prompt="@string/app_title"
                android:clipChildren="false"
                android:contentDescription="@string/txt1"
                android:scrollbarSize="10dp"
                android:textColorHint="#05ab9a"
                android:spinnerMode="dropdown"
                tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/txt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:text="@string/txt2"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/spinnerUbi"
                android:layout_width="328dp"
                android:layout_height="48dp"
                android:layout_marginBottom="60dp"
                android:contentDescription="@string/txt2"
                android:scrollbarSize="10dp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/btnSiguiente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginBottom="40dp"

                android:background="@drawable/button_background"
                android:text="@string/escanear"
                android:textAllCaps="true"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>